# miniApps

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LIESMICH.md  README.md  pyproject.toml  requirements.txt
authentication/: .env.example  decrypt_password.py  encrypt_password.py
check_inventory/: check_inventory.py  check_inventory.yaml.example
check_mk/: check_mk.py  check_mk.yaml.example  init_check_mk.yaml.example
convert_cvs/: convert_csv.py  convert_csv.yaml.example
docs/: conf.py  index.rst
examples/: nornir_script.py  sot_getter.py  sot_repository.py  sot_rest.py  sot_select.py  veritas_journal.py
kobold/: .env.example  export.py  import_update.py  kobold.py  run.py  run_playbook.py
messagebus/: show_logs.py
nachtwaechter/: .env.example  nachtwaechter.py  netwalk.py
onboarding/: LIESMICH.md  README.md  inventory.xlsx.example  inventory.yaml.example  onboarding.py
onboarding_v1/: onboarding.py
scan_prefixes/: scan_prefixes.py  scan_prefixes.yaml.example
script_bakery/: backup_configs.py  compare_configs.py  config.yaml.example  write_snmp_config.py  write_user_config.py
set_latency/: set_latency.py
set_link/: set_link.py  set_link.yaml.example
set_snmp/: set_snmp.py  set_snmp.yaml.example
smokeping/: smokeping.py
sot_properties/: config.yaml.example  set_properties.py  sot_properties.py
sync_cmk/: cmk.yaml.example  init_cmk.py  show_cmk.py  sync_cmk.py
sync_phpipam/: config.yaml.example  phpipam.py  sync_phpipam.py
sync_smokeping/: smokeping.py  sync_smokeping.py
transformer/: mapping.yaml  transformer.py  (+3 more)
(+286 files in other folders)
