[tool.poetry]
name = "miniapps"
version = "0.1.0"
description = ""
authors = ["veritas-sot <veritas-sot@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pika = "^1.3.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
pysnmp = "^4.4.12"
xlsxwriter = "^3.1.9"
icmplib = "^3.0.4"
boolean-parser = "^0.1.4"

[tool.poetry.group.dev.dependencies]
myst-nb = "^1.0.0"
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
